# PaddleOCR2Pytorch

./: .gitignore  MANIFEST.in  pyproject.toml
ptstructure/: predict_system.py
ptstructure/layout/ptppyolov2/: ppyolov2_base.py  ppyolov2_layout.py
ptstructure/table/: predict_structure.py
ptstructure/vqa/pytorchnlp/transformers/: model_utils.py
pytorchocr/: base_ocr_v20.py
pytorchocr/postprocess/: rec_postprocess.py
tools/infer/: predict_cls.py  predict_det.py  predict_e2e.py  predict_rec.py
